Fix alignment bug on more hours toggle.

--- a/src/scss/components/_hours.scss
+++ b/src/scss/components/_hours.scss
@@ -322,6 +322,9 @@
             background-color: $globe;
             transition: $transition-all;
             margin-top: 7px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
             &::before {
               margin-right: 0;
